Damn Error been fixed

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-mongodb+srv://test:Loudgoes$1@cluster0.y2rvsa3.mongodb.net/?retryWrites=true&w=majority
+mongodb+srv://test:Loudgoes$1@cluster0.gn1dxdw.mongodb.net/?retryWrites=true&w=majority
